# value-ops-lab

./: .gitattributes  .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt
app/: streamlit_app.py
data/Synthetic/: generator_config.yaml
data/raw/: sample_ar_ap.csv  sample_inventory.csv  sample_txn_gl.csv
notebooks/: 01_eda_ccc.ipynb  02_forecast_cashflow_cvar.ipynb  03_lbo_sensitivity.ipynb
tests/: test_ccc.py  test_dp_policies.py  test_risk_models.py
value_ops_lab/: __init__.py  ccc.py  diagnostics.py  dp_policies.py  io_utils.py  risk_models.py  scenario_engine.py  synth.py
